<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_marginStart="@dimen/margin_medium"
    android:layout_marginEnd="@dimen/margin_medium"
    android:background="@drawable/main_restaurant_card_background">

    <com.joooonho.SelectableRoundedImageView
        android:id="@+id/imageview_item_restaurant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageheight_item_restaurant"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:sriv_left_top_corner_radius="@dimen/item_restaurant_corner_radius"
        app:sriv_right_top_corner_radius="@dimen/item_restaurant_corner_radius"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view_item_restaurant_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageheight_item_restaurant"
        android:background="@drawable/main_restaurant_shadow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageview_item_restaurant_logo"
        android:layout_width="@dimen/restaurant_logo_width"
        android:layout_height="@dimen/restaurant_logo_height"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/view_item_restaurant_shadow"
        app:layout_constraintEnd_toEndOf="@+id/view_item_restaurant_shadow"
        app:layout_constraintStart_toStartOf="@+id/view_item_restaurant_shadow"
        app:layout_constraintTop_toTopOf="@+id/view_item_restaurant_shadow" />

    <TextView
        android:id="@+id/textview_item_restaurant_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:drawablePadding="@dimen/padding_extra_small"
        android:textSize="@dimen/textsize_medium"
        android:textColor="@color/colorYellow"
        android:fontFamily="@font/avenir_next_regular"
        android:background="@drawable/main_restaurant_rating_background"
        android:drawableStart="@drawable/ic_star_24dp"
        app:layout_constraintStart_toStartOf="@+id/view_item_restaurant_shadow"
        app:layout_constraintBottom_toBottomOf="@+id/view_item_restaurant_shadow"/>

    <TextView
        android:id="@+id/textview_item_restaurant_delivery_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:fontFamily="@font/avenir_next_regular"
        android:textSize="@dimen/textsize_medium"
        android:textColor="@color/colorBlack"
        android:background="@drawable/main_restaurant_delivery_time_background"
        app:layout_constraintEnd_toEndOf="@+id/view_item_restaurant_shadow"
        app:layout_constraintBottom_toBottomOf="@+id/view_item_restaurant_shadow"/>

    <TextView
        android:id="@+id/textview_item_restaurant_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:textSize="@dimen/textsize_large"
        android:fontFamily="@font/avenir_next_regular"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/imageview_item_restaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textview_item_restaurant_cuisines"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_extra_small"
        android:maxLines="1"
        android:ellipsize="end"
        android:fontFamily="@font/avenir_next_regular"
        android:textSize="@dimen/textsize_small"
        app:layout_constraintTop_toBottomOf="@+id/textview_item_restaurant_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textview_item_restaurant_promotion"/>

    <TextView
        android:id="@+id/textview_item_restaurant_promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@drawable/main_restaurant_promotion_background"
        android:text="@string/item_restaurant_advertisement"
        android:fontFamily="@font/avenir_next_regular"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_item_restaurant_cuisines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_item_restaurant_cuisines" />

    <ImageView
        android:id="@+id/imageview_item_restaurant_scooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:srcCompat="@drawable/ic_scooter_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textview_item_restaurant_scooter"
        app:layout_constraintTop_toBottomOf="@+id/textview_item_restaurant_cuisines" />

    <TextView
        android:id="@+id/textview_item_restaurant_scooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:text="@string/item_restaurant_delivery"
        android:fontFamily="@font/avenir_next_regular"
        android:textSize="@dimen/textsize_small"
        app:layout_constraintStart_toEndOf="@+id/imageview_item_restaurant_scooter"
        app:layout_constraintTop_toTopOf="@+id/imageview_item_restaurant_scooter" />

    <ImageView
        android:id="@+id/imageview_item_restaurant_tenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        app:layout_constraintStart_toEndOf="@+id/textview_item_restaurant_scooter"
        app:layout_constraintTop_toTopOf="@+id/imageview_item_restaurant_scooter"
        app:srcCompat="@drawable/ic_tenge_24dp" />

    <TextView
        android:id="@+id/textview_item_restaurant_tenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:text="@string/item_restaurant_price"
        android:fontFamily="@font/avenir_next_regular"
        android:textSize="@dimen/textsize_small"
        app:layout_constraintStart_toEndOf="@+id/imageview_item_restaurant_tenge"
        app:layout_constraintTop_toTopOf="@+id/imageview_item_restaurant_tenge" />

    <View
        android:id="@+id/view_item_restaurant_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/imageview_item_restaurant_scooter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>
